# MultiConf

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  example.py  pyproject.toml
docs/: requirements.txt
docs/source/: citing.rst  conf.py  documentation.rst  getting_started.md  index.rst  references.rst
src/multiconf/: icp_wrapper.py  prediction_regions.py  utils.py
src/structural_penalties_icp/: __init__.py  icp_predictor.py  icp_wrapper.py  prediction_regions.py
src/structural_penalties_icp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
