[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-penalties-icp"
version = "0.1.0"
authors = [
  { name="Kostas Katsios", email="kos.katsios@gmail.com" },
]
description = "Inductive Conformal Prediction with dynamic structural penalties for multi-label classification."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "pandas>=2.0.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = "https://github.com/your-username/structural_penalties_icp"
#"Bug Tracker" = "https://github.com/your-username/structural_penalties_icp/issues"