[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiconf"
version = "0.1.0"
authors = [
  { name="Kostas Katsios", email="kos.katsios@gmail.com" },
]
description = "Conformal Prediction for Multi-label classification."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.10.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/k-kostas/MultiConf"
"Bug Tracker" = "https://github.com/k-kostas/MultiConf/issues"